--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ToyApps</string>
+    <string name="notification_text">Click to launch the KA Biometric App</string>
 </resources>
